[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=61.2']

[project]
name = 'cellSAM'
description = 'Foundation model for cell segmentation'
readme = 'README.md'
requires-python = '>=3.10'
dynamic = ['version']
dependencies = [
    'numpy < 2',
    'pyyaml',
    'scikit-image',
    'segment_anything@git+https://github.com/facebookresearch/segment-anything.git',
    'torch',
    'torchvision==0.15.1',
    'tqdm',
    'pytest',
    'setuptools',
]

[project.optional-dependencies]
napari = [
    'napari[all]',
    'magicgui',
    'qtpy'
]

[project.scripts]
cellsam = "cellSAM.cli:main"

[tool.setuptools]
zip-safe = false
include-package-data = false

packages = [
    'cellSAM',
    'cellSAM.AnchorDETR',
    'cellSAM.AnchorDETR.models',
    'cellSAM.AnchorDETR.util',
    'cellSAM.napari_plugin',
]

[tool.setuptools.package-data]
cellSAM = ['modelconfig.yaml']

[tool.setuptools.dynamic.version]
attr = 'cellSAM.__version__'
